deployments/kubectl/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: glauth
  name: glauth
spec:
  ports:
    - name: ldap
      port: 3893
      targetPort: 3893
    - name: web
      port: 5555
      targetPort: 5555
  selector:
    app: glauth
