deployments/kubectl/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: glauth-ldap-tls-sniless
spec:
  entryPoints: ["ldap"]
  routes:
    - match: HostSNI(`*`)
      services:
      - name: glauth
        port: 3893
  # tls:
  #   passthrough: true
  #   domains:
  #   - main: glauth.internal
  #   secretName: glauth-tcp-tls
---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRouteTCP
# metadata:
#   name: glauth-ldap-tls
# spec:
#   entryPoints: ["ldap"]
#   routes:
#     - match: HostSNI(`glauth.internal`)
#       services:
#       - name: glauth
#         port: 3893
#   tls:
#     passthrough: false
#     domains:
#     - main: glauth.internal
#     secretName: glauth-tcp-tls
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRouteTCP
# metadata:
#   name: glauth-ldap
# spec:
#   entryPoints: ["ldap"]
#   routes:
#     - match: HostSNI(`*`)
#       services:
#       - name: glauth
#         port: 3893
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRouteTCP
# metadata:
#   name: glauth-ldaps
# spec:
#   entryPoints: ["ldaps"]
#   routes:
#     - match: HostSNI(`*`)
#       services:
#       - name: glauth
#         # port: 3894
#         port: 3894
#   tls:
#     # with passthorugh enabled i get to the LDAP server with StartTLS
#     # but glauth doesn't support that 
#     # [glauth] Tue, 14 Nov 2023 11:20:23 +0000 INF handleConnection ber.ReadPacket ERROR: tls: first record does not look like a TLS handshake
#     passthrough: true 
#     domains:
#     - main: glauth.internal
#     secretName: glauth-tcp-tls
---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRouteTCP
# metadata:
#   name: glauth-ldaps-passthrough
# spec:
#   entryPoints: ["web"]
#   routes:
#     - match: HostSNI(`*`)
#       services:
#       - name: glauth
#         port: 3894
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRouteTCP
# metadata:
#   name: glauth-tcp-tlsess
# spec:
#   routes:
#     - match: HostSNI(`*`)
#       services:
#       - name: glauth
#         port: 3893
# ---
# apiVersion: traefik.io/v1alpha1
# kind: TraefikService
# metadata:
#   name: glauth-tcp
# spec:
#   weighted:
#     services:
#       - name: glauth
#         port: 3893
#         weight: 1
